# endless

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONCEPTS.md  Clock_UI.tscn  Dropped_Item.tscn  Enemy.tscn  Far371E.tmp  Far57FB.tmp  FarB9CD.tmp  FarCE92.tmp  Farmer.tscn  FieldMarker.gd  Health_UI.tscn  Inventory_UI.tscn  Item_Slot.tscn  Player.tscn  README.md  Wor291B.tmp  Wor4878.tmp  Wor675E.tmp  Wor9BE8.tmp  World.tscn  bevy_npc.gdextension  debloat.ps1  icon.svg.import  issue-26-benchmark.txt  issue-26-status.md  main.gd  main.gd.uid  main.tscn23043095983.tmp  project.godot  run.ps1  test-config.yaml  test-write.yaml
.claude/: README.md  Sanitize.ps1  SanitizeOutput.ps1  Unsanitize.ps1  settings.json  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
assets/: roguelikeChar_transparent.png.import  roguelikeSheet_transparent.png.import
autoloads/: config.gd  config.gd.uid  user_settings.gd  user_settings.gd.uid  world_clock.gd  world_clock.gd.uid
docs/: README.md  ai-collab-workflow.md  ai-player.md  api.md  armory-ui.md  assembly.md  audio.md  authority.md  behavior.md  bench-guardrails.md  (+31 more)
rust/: Cargo.toml  bench_results.txt  build.rs
rust/assets/shaders/: npc_compute.wgsl  npc_render.wgsl  projectile_compute.wgsl
rust/benches/: check_regression.py  ci-baseline.json  hashmap_bench.rs  system_bench.rs  update_baseline.py
rust/shaders/: halo.gdshader  npc_sprite.gdshader
rust/src/: api.rs  channels.rs  components.rs  constants.rs  entity_map.rs  gpu.rs  lib.rs  main.rs  messages.rs  npc_render.rs  render.rs  rendering.rs  resources.rs  save.rs  settings.rs  simd.rs  systemparams.rs  tracing_layer.rs  world.rs
rust/src/constants/: buildings.rs  mod.rs  npcs.rs  upgrades.rs
rust/src/gpu/: buffers.rs  mod.rs  npc_compute.wgsl
rust/src/render/: mod.rs
rust/src/systems/: ai_player.rs  audio.rs  behavior.rs  combat.rs  drain.rs  economy.rs  energy.rs  health.rs  llm_player.rs  mod.rs  movement.rs  pathfinding.rs  patrol.rs  remote.rs  spawn.rs  stats.rs  sync.rs  work_targeting.rs
rust/src/systems/ai_player/: build_actions.rs  decision.rs  mine_analysis.rs  mod.rs  slot_selection.rs  squad_commander.rs  tests.rs
rust/src/systems/decision/: mod.rs  tests.rs
rust/src/systems/economy/: mod.rs  tests.rs
rust/src/systems/health/: mod.rs  tests.rs
rust/src/systems/stats/: mod.rs  tests.rs
rust/src/tests/: ai_building.rs  archer_patrol.rs  archer_tent_reliability.rs  coalesce_safety.rs  combat.rs  economy.rs  endless_mode.rs  energy.rs  farm_visual.rs  farmer_cycle.rs  fountain_shot_stale.rs  friendly_fire_buildings.rs  guard_patrol.rs  heal_visual.rs  healing.rs  loot_cycle.rs  miner_cycle.rs  mod.rs  movement.rs  npc_visuals.rs  pathfind_maze.rs  projectiles.rs  raider_cycle.rs  sandbox.rs  sleep_visual.rs  slot_reuse_wave.rs  spawning.rs  stress_archer_towns.rs  terrain_visual.rs  tower_massacre.rs  vertical_slice.rs  world_gen.rs
rust/src/ui/: armory.rs  blackjack.rs  build_menu.rs  combat_log.rs  game_hud.rs  left_panel.rs  main_menu.rs  mod.rs  policies_panel.rs  right_panel.rs  roster_panel.rs  tutorial.rs  upgrade_menu.rs
rust/src/ui/game_hud/: build_ghost.rs  building_inspector.rs  combat_log.rs  inspector.rs  mod.rs  npc_inspector.rs  squad_overlay.rs
rust/src/ui/left_panel/: inventory_ui.rs  mod.rs  roster_ui.rs  tech_tree.rs  upgrades_ui.rs
rust/src/world/: autotile.rs  buildings.rs  mod.rs  tests.rs  worldgen.rs
(+149 files in other folders)
