[package]
name = "endless"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"

[[bin]]
name = "endless"
path = "src/main.rs"

[features]
tracy = ["bevy/trace_tracy"]

[dependencies]
bevy = { version = "0.18", features = ["trace", "bevy_remote"] }
bevy_egui = "0.39"
bytemuck = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"
wgpu = { version = "27", default-features = false }
rand = "0.9"
noise = "0.9"
arboard = "3"
bevy_embedded_assets = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
pathfinding = "4"
regex = "1.12.3"
serde_toon2 = "0.1"
