[package]
name = "endless"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"

[[bin]]
name = "endless"
path = "src/main.rs"

[features]
tracy = ["bevy/trace_tracy"]

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    # core app
    "std",
    "async_executor",
    "bevy_asset",
    "bevy_input_focus",
    "bevy_log",
    "bevy_state",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "reflect_auto_register",
    "default_font",
    "multi_threaded",
    "sysinfo_plugin",
    # 2d rendering
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_camera",
    "bevy_color",
    "bevy_image",
    "bevy_mesh",
    "bevy_shader",
    "bevy_text",
    "png",
    "hdr",
    # ui
    "bevy_ui",
    "bevy_ui_render",
    # audio
    "bevy_audio",
    "vorbis",
    # debug / remote
    "bevy_remote",
    "trace",
] }
bevy_egui = { version = "0.39", default-features = false, features = [
    "manage_clipboard", "open_url", "default_fonts", "render", "bevy_ui",
] }
bytemuck = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wgpu = { version = "27", default-features = false }
rand = "0.9"
noise = "0.9"
arboard = "3"
bevy_embedded_assets = "0.15"
bevy_framepace = { version = "0.21", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std"] }
pathfinding = "4"
serde_toon2 = "0.1"
hashbrown = "0.15"

[dev-dependencies]
ahash = "0.8"
bevy_ecs = "0.18"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "hashmap_bench"
harness = false

[[bench]]
name = "system_bench"
harness = false
